# SoftDevNinja

./: README.md
dev1/: Makefile
dev2/: project.tgz
dev2/project/: configure.ac
dev2/project/src/main/: Makefile.am
dev3/: solution.py  test
python1/: sol
python2/: SECRET  sol
python3/: .sol.swp  README.txt  sol  underground.map
shell1/: README.txt  sol
shell2/: README.txt  netflow_log  sol
shell3/: README.txt  sol
